tests/snapshots/graph_snapshots__empty_graph.snap
---
source: tests/graph_snapshots.rs
expression: rendered
---
{
  "nodes": [],
  "candidate_links": [],
  "resolved_relationships": [],
  "diagnostics": []
}
